--- a/TorchModels/Texture/textures.ipynb
+++ b/TorchModels/Texture/textures.ipynb
@@ -160,6 +160,7 @@
     "model = SelfOrganisingTexture()\n",
     "optimiser = torch.optim.Adam(model.parameters(), lr=0.01)\n",
     "lr_scheduler = torch.optim.lr_scheduler.MultiStepLR(optimiser, milestones=[500, 1000], gamma=0.3)\n",
+    "loss_fn = create_vgg_loss_fn(target)\n",
     "\n",
     "# Initialise CA state\n",
     "with torch.no_grad():\n",
@@ -184,8 +185,11 @@
     "\n",
     "for epoch in range(EPOCHS):\n",
     "    with torch.no_grad():\n",
+    "        # Select a random batch of samples from the pool\n",
     "        batch_idx = torch.randperm(pool.size(0))[:BATCH_SIZE]\n",
     "        x = pool[batch_idx]\n",
+    "\n",
+    "        # Every 8 epochs, seed the model with a new sample\n",
     "        if epoch % 8 == 0:\n",
     "            x[:1] = model.seed(1)\n",
     "\n",
@@ -195,7 +199,16 @@
     "        x = model(x)\n",
     "\n",
     "    # Calculate loss = overflow loss + VGG loss\n",
-    "    vgg_loss = create_vgg_loss_fn(x)\n"
+    "    overflow_loss = (x - x.clamp(-1.0, 1.0)).abs().sum()\n",
+    "    vgg_loss = create_vgg_loss_fn(x)\n",
+    "    loss = overflow_loss + vgg_loss\n",
+    "\n",
+    "    # Backpropagate and update model\n",
+    "    with torch.no_grad():\n",
+    "        optimiser.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimiser.step()\n",
+    "        lr_scheduler.step()\n"
    ]
   }
  ],
