--- a/TorchModels/Texture/textures.ipynb
+++ b/TorchModels/Texture/textures.ipynb
@@ -266,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"texture.webp\" type=\"image/webp\" />"
+       "<img src=\"texture.webp\" type=\"image/webp\" width=\"512px\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -284,7 +284,7 @@
    ],
    "source": [
     "STEPS = 300\n",
-    "SIZE = 256\n",
+    "SIZE = 512\n",
     "\n",
     "frames = []\n",
     "\n",
@@ -305,7 +305,7 @@
     "frames[0].save(path, save_all=True, append_images=frames[1:], optimize=True, duration=1000/30, loop=0)\n",
     "\n",
     "# Display the video\n",
-    "display(HTML(f'<img src=\"{path}\" type=\"image/webp\" />'))"
+    "display(HTML(f'<img src=\"{path}\" type=\"image/webp\" width=\"{SIZE}px\"/>'))"
    ]
   }
  ],
