docs: improve documentation and comments

--- a/TorchModels/Texture/textures.ipynb
+++ b/TorchModels/Texture/textures.ipynb
@@ -5,8 +5,13 @@
    "metadata": {},
    "source": [
     "# Self Organising Textures\n",
+    "This notebook demonstrates the ability of NCA to learn self-organising textures.  Given a texture sample, the model learns to generate similar features (such as colours, lines, patterns and overall composition), without directly copying the input.  The idea is that the model learns to generate textures that are similar to the input, but are unique and can applied to an infinitely large surface.\n",
     "\n",
-    "## Imports"
+    "## Imports\n",
+    " - `numpy`\n",
+    " - `torch`\n",
+    " - `matplotlib` - Plotting loss graphs.\n",
+    " - `IPython.display` - For displaying outputs within the notebook."
    ]
   },
   {
@@ -33,7 +38,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading the Target Image"
+    "## Loading the Target Image\n",
+    "\n",
+    "The target image is first loaded, and then converted to a tensor. The tensor is then normalised to the range $[0, 1]$ and has the same shape as our NCA later.\n",
+    "\n",
+    "` batches, channels, height, width`\n",
+    " - Batches: 1\n",
+    " - Channels: 3 (RGB)\n",
+    " - Height/Width: Define by `SIZE`"
    ]
   },
   {
@@ -71,15 +83,20 @@
     "\n",
     "# Apply the transformation and add a batch dimension\n",
     "target = transform(target).unsqueeze(0)\n",
-    "if (USE_GPU):\n",
-    "    target = target.cuda()"
+    "if (USE_GPU): target = target.cuda()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loss Function"
+    "## Loss Function\n",
+    "The loss function is the most complicated and crucial part of developing self organising textures.  The final loss function is the sum of two separate loss functions.\n",
+    "1. **Overflow Loss** - Loss function that penalises the model for generating pixels that are too bright or too dark.\n",
+    "2. **VGG Loss** - Loss function that penalises the model for not generating textures that are similar to the target image.\n",
+    "\n",
+    "### VGG Loss\n",
+    "The VGG loss is calculated by passing the generated image and the target image through a pre-trained VGG network. The VGG network is used to extract features from the images. The loss is then calculated as the squared error between random projections on the features of the generated image and the target image.  We use $n$ random projections to calculate the loss, as this greatly minimises the amount of work required to calculate the loss."
    ]
   },
   {
@@ -118,15 +135,28 @@
     "    return features\n",
     "\n",
     "def optimal_transport_loss(sample: torch.Tensor, target: torch.Tensor, projections_n = 32) -> torch.Tensor:\n",
-    "    # TODO: Document and explain this function\n",
     "    channels, n = sample.shape[-2:]\n",
+    "\n",
+    "    # Generate n random projections for each channel\n",
     "    projections = F.normalize(torch.randn(channels, projections_n), dim=0)\n",
-    "    sample_projections = sort_projections(sample, projections)\n",
-    "    target_projections = sort_projections(target, projections)\n",
+    "\n",
+    "    # Project samples and target onto random projections and sort\n",
+    "    sample_projections = sorted_projections(sample, projections)\n",
+    "    target_projections = sorted_projections(target, projections)\n",
+    "\n",
+    "    # Interpolate target projections to match sample size\n",
     "    target_interpolation = F.interpolate(target_projections, size=n, mode='nearest')\n",
+    "\n",
+    "    # Calculate optimal transport loss from the squared error between the two projection distributions\n",
     "    return (sample_projections - target_interpolation).square().sum()\n",
     "\n",
-    "def sort_projections(x, proj):\n",
+    "def sorted_projections(x, proj):\n",
+    "  # Project samples onto random projections and sort\n",
+    "  # Calculate the dot product of each pixel with each projection\n",
+    "  # x: (b: batch, c: channels, n: pixels)\n",
+    "  # proj: (c: channels, p: projections_n)\n",
+    "  # output: (b: batch, p: projections_n, n: pixels)\n",
+    "  # Finally, sort the projections so they can be aligned with the target distribution\n",
     "  return torch.einsum('bcn,cp->bpn', x, proj).sort()[0]\n",
     "\n",
     "def create_vgg_loss_fn(target: torch.Tensor):\n",
@@ -176,7 +206,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training Loop"
+    "## Training Loop\n",
+    "In a given iteration of the training loop, the following steps are performed:\n",
+    "1. Select a random sample of NCA states from the pool.\n",
+    "2. Iterate over the NCA states with the current weights of the model a random number of times.\n",
+    "3. Calculate the loss and backpropagate the gradients."
    ]
   },
   {
@@ -261,7 +295,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Video Generation"
+    "## Video Generation\n",
+    "\n",
+    "Finally, we can generate a video of the texture generation process.  A texture usually emerges after ~30 iterations, and will become more stable as time goes on.\n",
+    "The video is saved as `webp` format, which is a lossless and more efficient format than `gif`."
    ]
   },
   {
