docs: gradient normalisation

--- a/TorchModels/Texture/textures.ipynb
+++ b/TorchModels/Texture/textures.ipynb
@@ -263,9 +263,9 @@
     "    with torch.no_grad():\n",
     "        loss.backward()\n",
     "\n",
-    "        # Normalise gradients\n",
+    "        # Normalise gradients and add a small value to the denominator to avoid division by zero\n",
     "        for param in model.parameters():\n",
-    "            param.grad /= (param.grad.norm()+1e-8)\n",
+    "            param.grad /= (param.grad.norm() + 1e-8)\n",
     "    \n",
     "        optimiser.step()\n",
     "        optimiser.zero_grad()\n",
