feat: save weights compact binary form

--- a/TorchModels/Texture/textures.ipynb
+++ b/TorchModels/Texture/textures.ipynb
@@ -378,9 +378,36 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 0: layers.0.weight - Shape: (96, 48, 1, 1) - Size 4608\n",
+      "Layer 1: layers.0.bias - Shape: (96,) - Size 96\n",
+      "Layer 2: layers.2.weight - Shape: (12, 96, 1, 1) - Size 1152\n"
+     ]
+    }
+   ],
    "source": [
-    "torch.save(model.state_dict(), './textures.bin')"
+    "torch.save(model.state_dict(), './texture.pth')\n",
+    "\n",
+    "# Prepare weights list\n",
+    "weights_list = []\n",
+    "\n",
+    "# Log weight and bias shapes\n",
+    "for i, (name, param) in enumerate(model.named_parameters()):\n",
+    "    shape = tuple(param.shape)\n",
+    "    print(f\"Layer {i}: {name} - Shape: {shape} - Size {param.numel()}\")\n",
+    "\n",
+    "    # Append flattened weight/bias data\n",
+    "    weights_list.append(param.detach().cpu().numpy().flatten())\n",
+    "\n",
+    "# Concatenate all weights and biases into a single NumPy array\n",
+    "weights = np.concatenate(weights_list, dtype=np.float32)\n",
+    "\n",
+    "# Save to a raw binary file (compact format)\n",
+    "weights.tofile(\"./texture.bin\")"
    ]
   }
  ],
